2.5 合并 core 中功能，修复材质颜色问题，删除星际轨交线方块，优化项目结构